# pomodoro_tracker

./: Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_01_2007-fa564262d580_initial.py  7238c2c5e8ab_autoincrement_field_id_for_tasks.py  7308ce0ab937_create_tables.py  ce64892b817e_autoincrement_field_id_for_categories.py
src/: database.py  fixtures.py  main.py
src/analytics/handlers/: __init__.py  analytics.py
src/timer/: __init__.py  config.py  dependencies.py
src/timer/cache/: __init__.py  accessor.py
src/timer/handlers/: __init__.py  categories.py  ping.py  tasks.py
src/timer/models/: __init__.py  base.py  categories.py  tasks.py
src/timer/repositories/: __init__.py  cache_task.py  category_repository.py  task_repository.py
src/timer/schemas/: __init__.py  category.py  task.py
src/timer/services/: __init__.py  category_service.py  task_service.py
