[tool.poetry]
name = "pomodoro-tracker"
version = "0.1.0"
description = ""
authors = ["Artem Lobzov <psychodiss@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.117.1" }
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
dotenv = "^0.9.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.0"
psycopg2-binary = "^2.9.11"
redis = "^7.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
